--- a/index.html
+++ b/index.html
@@ -40,21 +40,22 @@
 
     </p>
     <section>
-        <div class="3rd-width">
+        <div class="third-width">
             <img src="images/6.png" alt="">
-            <h3></h3>
-            <p></p>
+            <h2>vegetables item 1</h2>
+            <p>you must be like this type of vegetables,our most of the customer like it</p>
         </div>
-        <div class="3rd-width">
+        <div class="third-width">
             <img src="images/8.png" alt="">
-            <h3></h3>
-            <p></p>
+            <h2>vegetables item 2</h2>
+            <p>this type of vagetables are very delicious .most of the people in the world like it</p>
         </div>
-        <div class="3rd-width">
+        <div class="third-width">
             <img src="images/9.png" alt="">
-            <h3></h3>
-            <p></p>
+            <h2>vegetables item 3</h2>
+            <p>come and take this type of vegetables .you must like it because it is delicious</p>
         </div>
     </section>
+    <h2>hhhh</h2>
 </body>
 </html>
